<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFriends">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:id="@+id/ECDAAtopView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/ECDAAview5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ECDAAtopView" />

        <ImageView
            android:id="@+id/ECDAAimageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/top_icon"
            android:src="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ECDAAtopText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="Edit Friend info"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ECDAAimageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ECDAAtopView"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageOnEditFD"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/user"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ECDAAtopText" />

        <LinearLayout
            android:id="@+id/ECDlinearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageOnEditFD">

            <Button
                android:id="@+id/openGalleryOnEditFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_bg"
                android:drawableStart="@drawable/ic_image"
                android:drawableTint="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Open gallery" />

            <Button
                android:id="@+id/openCameraOnEditFD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_bg"
                android:drawableStart="@drawable/ic_camera"
                android:drawableTint="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Open Camera" />
        </LinearLayout>

        <EditText
            android:id="@+id/nameOnAddFD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_profile"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ECDlinearLayout3" />

        <EditText
            android:id="@+id/numberOnAddFD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameOnAddFD" />


        <EditText
            android:id="@+id/dateOnAddFD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_date"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="Date Of Birth"
            android:inputType="date"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberOnAddFD" />


        <EditText
            android:id="@+id/addressOnAddFD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_home"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="Address"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateOnAddFD" />


        <Button
            android:id="@+id/updateButtonOnAddFD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_bg"
            android:text="Update info"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressOnAddFD" />

        <View
            android:id="@+id/ECDview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateButtonOnAddFD" />
        <ProgressBar
            android:id="@+id/ECDAAprogressBarOnSU"
            style="?android:attr/progressBarStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
